remove all warnings